# study-rust-be

./: .env  .env.db  .gitignore  .pre-commit-config.yaml  AGENTS.md  Cargo.toml  README.md  docker-compose.yml  rust-toolchain.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: clippy.yml
be-domain/: Cargo.toml
be-infrastructure/: Cargo.toml
be-infrastructure/src/: db.rs
be-presentation/: Cargo.toml
be-presentation/src/routers/users/: getter.rs
be-use-case/: Cargo.toml
docker/backend/: Dockerfile
docker/backend-dev/: Dockerfile  cmd.sh
docker/db/: init.sql
init/db/: 01-create-user.sh  02-init.sql
layers/domain/: Cargo.toml
layers/domain/src/: lib.rs
layers/domain/src/entity/: generation.rs
layers/domain/src/repository/: mod.rs
layers/domain/src/repository/generation/: error.rs  errors.rs  generation.rs  mod.rs  repo.rs
layers/domain/src/value_object/: mod.rs
layers/domain/src/value_object/energy_source/: error.rs  mod.rs  value.rs
layers/domain/src/value_object/sub_system/: error.rs  mod.rs  value.rs
layers/domain/src/value_object/unit/: error.rs  mod.rs  value.rs
layers/infra-db/: Cargo.toml  README.md
layers/infra-db-migration/: Cargo.toml  README.md
layers/infra-db-migration/src/: env.rs  lib.rs  m20251101_000001_create_schemas.rs  m20251101_000002_create_table_sites.rs  m20251101_000002_create_updated_at_setter.rs  m20251101_000003_create_table_devices.rs  m20251109_104531_create_junction_table_for_sites_and_devices.rs  m20251109_113902_add_set_updated_at_routine.rs  m20251109_125856_add_columns_of_created_at_and_updated_at.rs  m20251122_070538_create_sources_table.rs  m20251122_073958_create_groups_table.rs  m20251122_075428_create_units_table.rs  m20251122_080751_create_labels_table.rs  m20251122_081240_create_histories_table.rs  main.rs
layers/infra-db-migration/src/iden/: mod.rs
layers/infra-db-migration/src/iden/generation/: groups.rs  histories.rs  labels.rs  mod.rs  sources.rs  units.rs
layers/infra-db-migration/src/iden/spec/: devices.rs  mod.rs  sites.rs  sites_devices.rs
layers/infra-db/src/: connection.rs  env.rs  errors.rs  lib.rs
layers/infra-db/src/entity/: histories.rs  labels.rs  mod.rs  prelude.rs  units.rs
layers/infra-db/src/models/: groups.rs  prelude.rs  sources.rs
layers/infra-db/src/repository/: generation.rs  test.rs
layers/infrastructure-db/: Cargo.toml
layers/infrastructure-db/src/: env.rs
layers/presentation/: Cargo.toml
layers/presentation/src/: lib.rs
layers/presentation/src/routers/: mod.rs
layers/presentation/src/routers/health/: getter.rs  mod.rs
layers/presentation/src/routers/users/: creator.rs  getter.rs  mod.rs
layers/use-case/: Cargo.toml
migration/: Cargo.toml  README.md
migration/src/: consts.rs  lib.rs  m20251101_000001_create_schemas.rs  m20251101_000001_create_table_sites.rs  m20251101_000002_create_table_cells.rs  m20251101_000002_create_table_sites.rs  m20251101_000003_create_table_cells.rs  main.rs
migration/src/iden/: cell.rs  mod.rs  site.rs
src/: db.rs  lib.rs  main.rs  routes.rs
src/entity/: user.rs
src/models/: user.rs
src/presentation/: main.rs  mod.rs
src/presentation/routers/users/: mod.rs
src/routes/: users.rs
src/runner/: main.rs
