[package]
name = "study-rust-be"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8" }
tokio = { version = "1.47.2", features = ["rt-multi-thread", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
dotenvy = { version = "0.15" }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3" }
uuid = { version = "1.18", features = ["serde", "v4"] }
anyhow = { version = "1.0" }

[profile.dev]
opt-level = 0
