[workspace]
members = [".", "layers/*", "migration"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
axum = { version = "0.8.6" }
tokio = { version = "1.47.2", features = ["rt-multi-thread", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
dotenvy = { version = "0.15" }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3" }
uuid = { version = "1.18", features = ["serde", "v4"] }
anyhow = { version = "1.0" }

[package]
name = "study-rust-be"
version.workspace = true
edition.workspace = true

[dependencies]
layer-domain = {path = "layers/domain" }
layer-infrastructure-db = {path = "layers/infrastructure-db" }
layer-use-case = {path = "layers/use-case" }
layer-presentation = {path = "layers/presentation" }
tokio.workspace = true
axum.workspace = true
anyhow.workspace = true
dotenvy.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[profile.dev]
opt-level = 0

[profile.release]
opt-level = "s"  # Optimize for size
lto = true  # Enable Link Time Optimization
panic = "abort"  # Abort on panic for smaller binaries
strip = true  # Remove debug symbols
