[workspace]
members = [".", "layers/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
anyhow = "1.0"
async-compat = "0.2.5"
axum = "0.8.6"
chrono = "0.4.42"
chrono-tz = "0.10.4"
tokio = { version = "1.47.2", features = ["rt-multi-thread", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.18", features = ["serde", "v4"] }

[package]
name = "study-rust-be"
version.workspace = true
edition.workspace = true

[dependencies]
layer-domain = {path = "layers/domain" }
layer-infra-db = {path = "layers/infra-db" }
layer-use-case = {path = "layers/use-case" }
layer-presentation = {path = "layers/presentation" }
tokio.workspace = true
axum.workspace = true
anyhow.workspace = true
dotenvy.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[features]
debug = []

[profile.dev]
opt-level = 0

[profile.release]
opt-level = "s"  # Optimize for size
lto = true  # Enable Link Time Optimization
panic = "abort"  # Abort on panic for smaller binaries
strip = true  # Remove debug symbols
