[package]
name = "be-infrastructure"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
dotenvy.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
sea-orm = { version = "2.0.0-rc", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros" ] }
