[package]
name = "migration"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
anyhow.workspace = true
async-std = { version = "1", features = ["attributes", "tokio1"] }
dotenvy.workspace = true
layer-infrastructure-db = {path = "../layers/infrastructure-db" }

[dependencies.sea-orm-migration]
version = "1.1.0"
features = [
  "runtime-tokio-rustls",
  "sqlx-postgres",
]
