[package]
name = "infra-db-migration"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
anyhow.workspace = true
async-compat = "0.2.5"
dotenvy.workspace = true
smol = "2.0.2"

[dependencies.sea-orm-migration]
version = "1.1.0"
features = [
  "runtime-tokio-rustls",
  "sqlx-postgres",
]

[dependencies.layer-infra-db]
path = "../infra-db"
