[package]
name = "layer-infra-db"
version.workspace = true
edition.workspace = true

[dependencies]
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
layer-domain = { path = "../domain" }

[dependencies.sea-orm]
version = "2.0.0-rc"
features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
    "with-chrono"
]
