[package]
name = "layer-presentation"
version.workspace = true
edition.workspace = true

[dependencies]
tokio.workspace = true
axum.workspace = true
anyhow.workspace = true
dotenvy.workspace = true
serde.workspace = true
poem = "3.1.12"

[dependencies.layer-infra-db]
path = "../infra-db"

[dependencies.poem-openapi]
version = "5.1.16"
features = ["swagger-ui"]
