[package]
name = "layer-presentation"
version.workspace = true
edition.workspace = true

[dependencies]
axum.workspace = true
anyhow.workspace = true
chrono.workspace = true
dotenvy.workspace = true
poem = "3.1.12"
serde.workspace = true
tokio.workspace = true

[dependencies.layer-domain]
path = "../domain"

[dependencies.layer-infra-db]
path = "../infra-db"

[dependencies.poem-openapi]
version = "5.1.16"
features = ["swagger-ui"]
